--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -109,10 +109,10 @@
 
           <ImageView
               android:id="@+id/imageSessionDesc"
-              android:layout_width="36dp"
-              android:layout_height="36dp"
+              android:layout_width="40dp"
+              android:layout_height="40dp"
               android:scaleType="center"
-              android:layout_marginStart="20dp"
+              android:layout_marginStart="16dp"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginTop="16dp"
@@ -128,12 +128,10 @@
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               app:layout_constraintLeft_toRightOf="@+id/imageSessionDesc"
-              android:layout_marginLeft="16dp"
               app:layout_constraintTop_toTopOf="parent"
-              android:layout_marginTop="24dp"
+              android:layout_marginTop="28dp"
               android:layout_marginEnd="16dp"
-              app:layout_constraintRight_toRightOf="parent"
-              android:layout_marginRight="16dp" />
+              app:layout_constraintRight_toRightOf="parent"/>
 
           <ImageView
               android:id="@+id/imageSessionLocation"
@@ -141,11 +139,11 @@
               android:scaleType="center"
               android:layout_marginTop="24dp"
               app:layout_constraintTop_toBottomOf="@+id/textSessionDesc"
-              android:layout_marginStart="20dp"
+              android:layout_marginStart="16dp"
               app:layout_constraintLeft_toLeftOf="parent"
               tools:ignore="ContentDescription"
-              android:layout_width="36dp"
-              android:layout_height="36dp"
+              android:layout_width="40dp"
+              android:layout_height="40dp"
               android:visibility="gone"/>
 
           <TextView
@@ -159,6 +157,31 @@
               app:layout_constraintTop_toTopOf="@+id/imageSessionLocation"
               app:layout_constraintBottom_toBottomOf="@+id/imageSessionLocation"
               android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/imageLanguage"
+                android:src="@drawable/ic_flag"
+                android:scaleType="center"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/textLocation"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:ignore="ContentDescription"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/textLanguage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+                tools:text="Main Stage"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toRightOf="@+id/imageLanguage"
+                app:layout_constraintTop_toTopOf="@+id/imageLanguage"
+                app:layout_constraintBottom_toBottomOf="@+id/imageLanguage"
+                android:visibility="gone"/>
 
         </android.support.constraint.ConstraintLayout>
 
