--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:background="@color/tag_android_dark"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        app:elevation="@dimen/spacing_xsmall">
 
       <android.support.design.widget.CollapsingToolbarLayout
           android:id="@+id/collapsingToolbarLayout"
@@ -45,12 +46,6 @@
             app:titleMarginStart="0dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_collapseMode="pin"/>
-        <!--<View-->
-        <!--android:id="@+id/statusBarBackground"-->
-        <!--android:background="@color/black_54"-->
-        <!--android:fitsSystemWindows="true"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="24dp" />-->
       </android.support.design.widget.CollapsingToolbarLayout>
 
       <android.support.constraint.ConstraintLayout
@@ -81,7 +76,7 @@
             app:layout_constraintLeft_toLeftOf="@+id/textSessionTitle"
             tools:text="Awesome Speaker"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintRight_toRightOf="@+id/textSessionTitle"
             android:layout_marginEnd="8dp"
             android:transitionName="@string/transition_session_sub"/>
@@ -100,7 +95,8 @@
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:orientation="vertical">
+          android:orientation="vertical"
+          android:paddingTop="@dimen/spacing_medium">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -194,5 +190,14 @@
 
       </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/buttonAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|end"
+        android:visibility="invisible"/>
   </android.support.design.widget.CoordinatorLayout>
 </layout>
