--- a/app/src/main/res/layout/item_session_speaker.xml
+++ b/app/src/main/res/layout/item_session_speaker.xml
@@ -4,6 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/itemSessionSpeaker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
