--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
-        <include layout="@layout/appbar_main"
-            android:id="@+id/appbar"/>
+        <FrameLayout
+            android:id="@+id/navContentContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <android.support.design.widget.NavigationView
             android:id="@+id/navView"
