--- a/app/src/main/res/layout/fragment_event_part.xml
+++ b/app/src/main/res/layout/fragment_event_part.xml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/trackSessionList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:cardCornerRadius="2dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardBackgroundColor="@color/cardview_light_background">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/trackSessionList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v7.widget.RecyclerView>
-    </android.support.v7.widget.CardView>
+        android:paddingTop="@dimen/spacing_small"
+        android:paddingBottom="@dimen/spacing_small"
+        android:clipToPadding="false"/>
 </layout>
