--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="fragment_user" type="id" />
+
+    <item name="coordinatorLayout" type="id" />
+    <item name="appbar" type="id" />
+    <item name="collapsingToolbarLayout" type="id" />
+    <item name="toolbar" type="id" />
 </resources>
