--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -47,13 +47,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@+id/imageSession"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 app:layout_constraintLeft_toRightOf="@+id/imageSession"
                 tools:text="Awesome Session"
                 android:layout_marginTop="4dp"
                 app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
                 android:layout_marginEnd="8dp"
-                android:transitionName="@string/transition_session_title"/>
+                android:transitionName="@string/transition_session_title"
+                app:layout_constraintHorizontal_bias="0.66"/>
 
             <TextView
                 android:id="@+id/textSessionSub"
