--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="fragment_user" type="id" />
-
     <item name="coordinatorLayout" type="id" />
     <item name="appbar" type="id" />
     <item name="collapsingToolbarLayout" type="id" />
     <item name="toolbar" type="id" />
+
+    <item name="event_website_url" type="string" />
+
+    <item name="coc_contact" type="string" />
 </resources>
