--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -13,27 +13,29 @@
 
             <TextView
                 android:id="@+id/text_event_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/event_name_full"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="48dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="48dp"
+                android:gravity="center_horizontal"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
             <TextView
                 android:id="@+id/text_event_motto"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/text_event_name"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="48dp"
+                android:gravity="center_horizontal"
                 android:text="@string/event_motto"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
@@ -75,7 +77,6 @@
                 android:layout_marginEnd="0dp"
                 app:layout_constraintStart_toStartOf="@+id/text_app_version"
                 android:layout_marginBottom="24dp" />
-
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
