--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -1,87 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardSession"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_small"
-        android:layout_marginEnd="@dimen/spacing_small"
-        android:minHeight="56dp"
-        android:foreground="?selectableItemBackground"
-        android:clickable="true"
-        app:cardUseCompatPadding="true"
-        app:cardPreventCornerOverlap="true"
-        app:cardCornerRadius="@dimen/spacing_xsmall">
-
-        <ImageView
-            android:id="@+id/imageSessionBackground"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            tools:ignore="ContentDescription"/>
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/containerSessionForeground"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="16dp">
-
-            <de.devfest.ui.DevFestImageView
-                android:id="@+id/imageSession"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:roundCorners="true"
-                app:squareSized="true"
-                android:layout_marginTop="12dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                tools:src="@drawable/shape_circle"/>
-
-            <TextView
-                android:id="@+id/textSessionTitle"
-                android:textAppearance="@style/TextAppearance.DevFest.Card.Title.Inverse"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@+id/imageSession"
-                android:layout_marginStart="8dp"
-                app:layout_constraintLeft_toRightOf="@+id/imageSession"
-                tools:text="Awesome Session"
-                android:layout_marginTop="4dp"
-                app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
-                android:layout_marginEnd="8dp"
-                android:transitionName="@string/transition_session_title"
-                app:layout_constraintHorizontal_bias="0.66"/>
-
-            <TextView
-                android:id="@+id/textSessionSub"
-                android:textAppearance="@style/TextAppearance.DevFest.Card.Subtitle.Inverse"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/textSessionTitle"
-                app:layout_constraintLeft_toLeftOf="@+id/textSessionTitle"
-                tools:text="Awesome Speaker"
-                app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
-                android:layout_marginEnd="8dp"
-                android:transitionName="@string/transition_session_sub"/>
-
-            <ImageButton
-                android:id="@+id/buttonAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_add"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textSessionTitle"
-                tools:ignore="ContentDescription"/>
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.CardView>
-
-
-</layout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/containerSession"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/spacing_xsmall"
+    android:layout_marginEnd="@dimen/spacing_xsmall"
+    android:background="@android:color/white"
+    android:minHeight="56dp"
+    android:foreground="?selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true" />
